# domOXML

./: .coderabbit.yaml  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit  pre-push  pre-push.graph.example
.github/: pull_request_template.md
.github/workflows/: ci.yml  fidelity.yml
capabilities/pptx/blur-effect/: capability.toml  slide.html
capabilities/pptx/body-props/: capability.toml  slide.html
capabilities/pptx/borders/: capability.toml  slide.html
capabilities/pptx/bullets-spacing/: capability.toml  slide.html
capabilities/pptx/chart-preservation/: capability.toml
capabilities/pptx/custom-path/: capability.toml  slide.html
capabilities/pptx/custom-path-effects/: capability.toml  slide.html
capabilities/pptx/effects/: capability.toml  slide.html
capabilities/pptx/fill-overlay-effect/: capability.toml  slide.html
capabilities/pptx/fill-overlay-owned-fallback/: capability.toml  source.pptx
capabilities/pptx/hyperlink/: capability.toml  slide.html
capabilities/pptx/interleaved-order/: capability.toml  slide.html
capabilities/pptx/node-identity/: capability.toml  slide.html
capabilities/pptx/pattern-fills/: capability.toml  slide.html
capabilities/pptx/picture-crop/: capability.toml  slide.html
capabilities/pptx/preset-shadow-raster-fallback/: capability.toml  source.pptx
capabilities/pptx/preset-shadow-slide-fallback/: capability.toml  source.pptx
capabilities/pptx/preset-shapes/: capability.toml  slide.html
capabilities/pptx/reflection-effect/: capability.toml  slide.html
capabilities/pptx/soft-edge-effect/: capability.toml  slide.html
capabilities/pptx/svg-vector/: capability.toml  slide.html
capabilities/pptx/table/: capability.toml  slide.html
capabilities/pptx/text-decorations/: capability.toml  slide.html
capabilities/pptx/text-rich-runs/: capability.toml  slide.html
capabilities/pptx/transforms/: capability.toml  slide.html
capabilities/pptx/transition-bg/: capability.toml  slide.html
docs/review-assets/blur-effect/: README.md
docs/review-assets/capability-quality-contracts/: README.md
docs/review-assets/chart-preservation/: README.md
docs/review-assets/custom-path/: README.md
docs/review-assets/custom-path-effects/: README.md
docs/review-assets/effects/: README.md
docs/review-assets/fill-overlay-effect/: README.md
docs/review-assets/node-identity/: README.md
domoxml/: __init__.py  presentation.py  types.py
domoxml/core/: __init__.py  capabilities.py  crop.py  fillcrop.py  fontconvert.py  fonts.py  fontsread.py  html.py  images.py  real_decks.py  roundtrip.py  svg_path.py  svg_stroke.py  units.py
domoxml/slides/: __init__.py  _templates.py  appearance_read.py  background.py  connector_read.py  effect_read.py  geometry_guides.py  graphic_frame.py  inherit.py  media_read.py  pptx.py  read.py  text_read.py  transition.py  validation.py
real-decks/pptx/: README.md
scripts/: capability_check.py  fidelity_check.py  generate_spec_inventories.py  real_deck_check.py
spec/: architecture.md  implementation-roadmap.md  inventory-docx.md  inventory-pptx.md  inventory-shared.md  inventory-xlsx.md  pptx-coverage.md
tests/: test_body_props_unit.py  test_capabilities_unit.py  test_capability_script_unit.py  test_coverage_contract_unit.py  test_crop_unit.py  test_custgeom_and_connectors.py  test_effects_unit.py  test_fidelity_corpus_unit.py  test_fidelity_graph_unit.py  test_fidelity_integration.py  test_fidelity_script_unit.py  test_fidelity_unit.py  test_fills_unit.py  test_fonts_integration.py  test_fonts_unit.py  test_graphic_frame_unit.py  test_html_unit.py  test_images_unit.py  test_inherit_unit.py  test_ir_extract_handlers_unit.py  test_ir_integration.py  test_ir_model_unit.py  test_ir_unit.py  test_lines_unit.py  test_media_read_unit.py  test_metadata.py  test_native_unit.py  test_opc_unit.py  test_opc_validation_unit.py  test_pptx_integration.py  test_pptx_read_integration.py  test_pptx_read_unit.py  test_pptx_unit.py  test_presets_unit.py  test_real_decks_unit.py  test_render_integration.py  test_render_unit.py  test_slide_properties_unit.py  test_spec_inventory_script.py  test_tables_unit.py  (+3 more)
(+69 files in other folders)
